# ai-poc

./: .env  .gitignore  CLAUDE.md  FRAMEWORK_OVERVIEW.md  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  LOGGER_FIXES_COMPLETED.md  LOGGER_FIXES_SUMMARY.md  MULTI_LINE_ITEM_CAMPAIGN_IMPLEMENTATION.md  README.md  REFACTORING_SUMMARY.md  actual_compile.txt  batch_refactor.py  build_context.py  check_logger_errors.py  compile_output.txt  compile_output2.txt  comprehensive_logger_fix.py  config.json  find_all_logger_issues.py  fix_logger_errors.py  fix_logger_errors_list.txt  parse.py  parse_jira_fields.py  pom.xml  refactor_script.sh  requirements.txt  scenario_dictionary.txt  squash_mcp_client.js  step_dictionary.txt  test-file.txt  test_hello.py  write_prompt.py
.claude/commands/: iautomate.md
.github/: copilot-instructions.md
src/main/resources/squashglados/: .gitignore  Jenkinsfile  README.md  pyproject.toml
src/main/resources/squashglados/src/SquashGlados/: __init__.py  __main__.py  cucumber_parser.py  execution_updater.py  filter_tests.py  input_parser.py  logging_config.py  squash_api_glados.py  squash_constants.py  squash_glados.py  test_runner.py  utility_methods.py
src/main/resources/squashglados/tests/RobotFramework_tests/: basic_functionality.robot  res_general.txt
src/main/resources/squashglados/tests/tests/: TestSuiteWithPytestTests.py  conftest.py
src/main/resources/squashglados/tools/: glados_config_file_creator.html  pipeline_jenkins_squash_glados.txt  send_new_version_message.py
tmp_steps/: step_library.txt  step_library_clean.txt
(+280 files in other folders)
