[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~=69.1.0",
    "wheel ~=0.42.0",
]

[project]
name = "ib-squashglados"
version = "0.8.9"
description = "Run automation scripts from a Squash Campaign or Iteration"
dependencies = [
    "requests>=2.29.0",
    "robotframework>=6.0.0",
    "pytz>=2022.2.1",
    "beautifulsoup4>=4.0.0",
    "python-dotenv"
]
